# aether-editor

./: .gitignore  .mcp.json  Cargo.toml  install.sh  sample.csv  test.csv
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
docs/: index.html
packaging/: README.md  aether.desktop  build-appimage.sh  build-deb.sh
packaging/windows/: aether.iss
renderer/: Cargo.toml
renderer/src/: claude_sessions.rs  commands.rs  completion.rs  dap.rs  debug_config.rs  diff.rs  document.rs  encoding.rs  ext_detail.rs  ext_runtime.rs  extensions.rs  feedback_upload.rs  git.rs  gpu.rs  graph.rs  gutter_diff.rs  highlight.rs  icon.rs  icon.wgsl  layout.rs  lsp.rs  macos_launcher.rs  macos_menu.rs  main.rs  markdown.rs  marketplace.rs  media.rs  menus.rs  perf.rs  quad.rs  quad.wgsl  render.rs  search.rs  settings.rs  state.rs  syntax.rs  terminal.rs  textmate.rs  theme.rs  update.rs  (+2 more)
renderer/src/mcp/: PROTOCOL.md  agents.rs  discovery.rs  mod.rs  proxy.rs  server.rs  tools.rs
renderer/src/ptyhost/: client.rs  daemon.rs  mod.rs
renderer/src/ui/: binary_placeholder.rs  breadcrumbs.rs  chat_panel.rs  debug_panel.rs  editor_view.rs  explorer_panel.rs  ext_detail_view.rs  extensions_panel.rs  feedback_form.rs  find_widget.rs  info_page.rs  mod.rs  outline_panel.rs  search_panel.rs  source_control_panel.rs  terminal_panel.rs
